[package]
name = "audio_playe-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = {version="0.51.1",features=["Win32_Media_MediaFoundation", "implement", "Win32_UI_Shell_PropertiesSystem"]}
